05_NodeJS_Mongo_STS_Helm_EKS/k8s/30-nodejs-mongo-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nodejs-mongo
spec:
  selector:
    matchLabels:
      app: nodejs-mongo
  serviceName: nodejs-mongo-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs-mongo
    spec:
      imagePullSecrets:
      - name: registry-secret-for-alkol
      containers:
      - name: nodejs-mongo
        image: docker.io/alkol/nodejs-mongodb:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      - name: mongo7
        securityContext:
          runAsGroup: 999
          runAsUser: 999
        image: docker.io/mongo:7    
        ports:
        - containerPort: 27017
          name: mongodb-port
        volumeMounts:
          - name: data-disk
            mountPath: /data/db     
  volumeClaimTemplates:
  - metadata:
      name: data-disk
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2" # gp2 comes with aws-ebs-csi-driver addon installation in EKS hybrid mode (mean, EKS Auto Mode: Disabled )
      resources:
        requests:
          storage: 5Gi 
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-mongo
spec:
  type: ClusterIP
  selector:
    app: nodejs-mongo
  ports:
  - port: 3000
    targetPort: 3000
