05_NodeJS_Mongo_STS_Helm_EKS/k8s/40-httpRoute.yaml
# One service per LB
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: default
spec:
  parentRefs: # assumes the gateway name (Gateway API's gateway) is named my-alb-gateway
    - name: my-alb-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nodejs-mongo # assumes the service name of the application is nodejs-mongo
          port: 3000
